overflow fixed

--- a/menu.css
+++ b/menu.css
@@ -15,6 +15,7 @@ main {
   align-items: center;
 }
 .card {
+  overflow: hidden;
   border-radius: 10px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   position: relative;
